2012-03-22  Release Manager

	* GCC 4.7.0 released.

2012-01-23  Andreas Schwab  <schwab@linux-m68k.org>

	* lang.c (java_init_options_struct): Set
	frontend_set_flag_trapping_math.

2012-01-01  Jakub Jelinek  <jakub@redhat.com>

	* jcf-dump.c (version): Update copyright notice dates.

2011-12-03  Matthias Klose  <doko@ubuntu.com>

	* expr.c (SPECIAL_WIDE): Fix typo in message.

2011-11-23  Jeffrey A Law  (law@cygnus.com)

	* lang.c (java_init_options_struct): Disable optimizations
	which assume a NULL pointer dereference will cause a fault.

2011-11-07  Richard Henderson  <rth@redhat.com>

	* builtins.c (compareAndSwapInt_builtin): Use can_compare_and_swap_p.
	(compareAndSwapLong_builtin): Likewise.
	(compareAndSwapObject_builtin): Likewise.
	(VMSupportsCS8_builtin): Likewise.

2011-11-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* Make-lang.in (jvspec.o): Pass SHLIB instead of SHLIB_LINK.

2011-10-15  Tom Tromey  <tromey@redhat.com>
	    Dodji Seketeli  <dodji@redhat.com>

	* jcf-parse.c (set_source_filename): Adjust to the new map API.

2011-10-11  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* class.c (build_static_field_ref): Delete old interface with two
	parallel arrays to hold standard builtin declarations, and replace
	it with a function based interface that can support creating
	builtins on the fly in the future.  Change all uses, and poison
	the old names.  Make sure 0 is not a legitimate builtin index.
	* decl.c (java_init_decl_processing): Ditto.
	* except.c (compareAndSwapLong_builtin): Ditto.
	(compareAndSwapObject_builtin): Ditto.
	(putVolatile_builtin): Ditto.
	(define_builtin): Ditto.
	(check_for_builtin): Ditto.
	* expr.c (rewrite_arglist_getcaller): Ditto.
	(expand_java_field_op): Ditto.

2011-08-24  Joseph Myers  <joseph@codesourcery.com>

	* Make-lang.in (CFLAGS-java/jcf-io.o, CFLAGS-java/jcf-path.o):
	New.
	(java/jcf-io.o, java/jcf-path.o): Remove explicit compilation
	rules.

2011-08-18  Peter Collingbourne  <peter@pcc.me.uk>
