@@ -189,6 +189,13 @@ java_type_for_size (unsigned bits, int unsignedp)
     return unsignedp ? unsigned_int_type_node : int_type_node;
   if (bits <= TYPE_PRECISION (long_type_node))
     return unsignedp ? unsigned_long_type_node : long_type_node;
+  /* A 64-bit target with TImode requires 128-bit type definitions
+     for bitsizetype.  This is fixed more properly elsewhere 
+     beginning in 4.8.  */
+  if (int128_integer_type_node
+      && bits == TYPE_PRECISION (int128_integer_type_node))
+    return (unsignedp ? int128_unsigned_type_node
+	    : int128_integer_type_node);
   return 0;
 }
 
