@@ -1,3 +1,7 @@
+2012-05-11  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	* typeck.c (java_type_for_size): Handle 128-bit sizes for bitsizetype.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
